--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "12.3.1",
+    "next-auth": "^4.12.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -17,11 +18,7 @@
     "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
-<<<<<<< HEAD
-    "postcss": "^8.4.16",
-=======
     "postcss": "^8.4.14",
->>>>>>> main
     "tailwindcss": "^3.1.8"
   }
 }
