--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "loginprojectusinexpress",
   "main": "index.js",
   "scripts": {
-    "devStart": "nodemon server.js"
+    "devStart": "nodemon src/server.js"
   },
   "author": "JhonnyCalvo",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
+    "mongoose": "^6.6.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   },
