--- a/backend/package.json
+++ b/backend/package.json
@@ -4,20 +4,21 @@
   "description": "loginprojectusinexpress",
   "main": "index.js",
   "scripts": {
-    "devStart": "nodemon src/server.js"
+    "devStart": "nodemon src/server.js",
+    "start": "node src/server.js"
   },
   "author": "JhonnyCalvo",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "connect-ensure-login": "^0.1.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
-    "mongoose": "^6.6.2",
-    "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "mongoose": "^6.6.2"
   },
   "devDependencies": {
     "dotenv": "^16.0.2",
