build: Change backend structure
Project Structure divided in folders and files (Need more changes)

Organizar estructura del backend

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "devStart": "nodemon src/server.js",
     "start": "node src/server.js"
   },
-  "author": "JhonnyCalvo",
+  "author": "JhonnyCalvo MiguelBriceño",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
