--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
-    "mongoose": "^6.6.2"
+    "mongoose": "^6.6.2",
+    "passport-local-mongoose": "^7.1.2"
   },
   "devDependencies": {
     "dotenv": "^16.0.2",
