--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
+    "memorystore": "^1.6.7",
     "method-override": "^3.0.0",
     "mongoose": "^6.6.2",
     "passport-local-mongoose": "^7.1.2"
